@@ -1,3 +1,4 @@
+.git
 .svn
 .tar.gz
 .DS_Store
